# law-bot

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.webhook.yml  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint.yml  release-deploy.yml  security.yml
alembic/: env.py
alembic/versions/: 6e2f8ab9c123_make_datetimes_timezone_aware.py  9f0a585859d4_add_followup_columns_to_chats.py  b4d99314cd34_initial_schema.py  c1a2b3c4d5e6_add_privacy_consent_at_to_users.py
deploy/nginx/conf.d/: law-bot.conf.example  max.conf
docs/: DEPLOYMENT.md
scripts/: docker-entrypoint.sh  init-letsencrypt.sh
src/: __init__.py  main.py  run_api.py
src/algorithms/: __init__.py  loader.py
src/api/: __init__.py  app.py  deps.py  openapi_config.py  router_health.py  router_integration.py  schemas.py
src/config/: logging_config.py  settings.py
src/core/: __init__.py  algorithm_engine.py  conversation_manager.py  validators.py
src/database/: __init__.py  base.py
src/database/models/: __init__.py  chat.py  consultation.py  conversation_step.py  message.py  telegram_models.py  user.py
src/messengers/: webhook_health.py
src/messengers/base/: __init__.py  abstract_messenger.py
src/messengers/max/: __init__.py  max_messenger.py
src/messengers/telegram/: __init__.py  telegram_messenger.py
src/scenarios/algorithms/: _template.yaml  arbitration.yaml  auto.yaml  bankruptcy.yaml  business.yaml  consumer.yaml  criminal.yaml  family.yaml  inheritance.yaml  ip.yaml  labor.yaml  land.yaml  main.yaml  medical.yaml  military.yaml  pension.yaml  real_estate.yaml  tax.yaml
src/security/: __init__.py  url_validation.py
src/services/: __init__.py  admin_service.py  backup_service.py  consultation_service.py  followup_service.py  health_service.py  outbound_sync.py
tests/: conftest.py  test_algorithm_engine.py  test_backup_service.py  test_consultation_service.py  test_conversation_manager.py  test_database.py  test_followup_service.py  test_health_service.py  test_security_url_validation.py  test_validators.py
