[tool.poetry]
name = "legal-consultation-bot"
version = "1.0.0"
description = "Универсальный многоплатформенный чат-бот для записи на юридические консультации"
authors = ["Legal Bot Team"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
sqlalchemy = "^2.0.36"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
aiohttp = "^3.11.0"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
maxapi = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
types-PyYAML = "^6.0.12"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
